kube/dev/02-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: palad-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: postgres
          image: postgres:18.2-alpine
          resources:
            requests:
              cpu: "300m"
              memory: "512Mi"
            limits:
              cpu: "2000m"
              memory: "3Gi"
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: postgres-data
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: palad-dev
spec:
  selector:
    app: db
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
