kube/dev/13-otlp-ingest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otlp-ingest
  namespace: palad-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otlp-ingest
  template:
    metadata:
      labels:
        app: otlp-ingest
    spec:
      serviceAccountName: palad-otlp
      containers:
        - name: otlp-ingest
          image: otlp-ingest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "150m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          ports:
            - name: http
              containerPort: 4318
---
apiVersion: v1
kind: Service
metadata:
  name: otlp-ingest
  namespace: palad-dev
spec:
  selector:
    app: otlp-ingest
  ports:
    - name: http
      port: 4318
      targetPort: 4318
