kube/dev/11-traefik-web.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: web
  namespace: palad-dev
spec:
  entryPoints:
    - websecure
  routes:
    - match: (Host(`palad.ai`) || Host(`www.palad.ai`)) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: web
          port: 4000
  tls:
    certResolver: letsencrypt
    domains:
      - main: palad.ai
        sans:
          - www.palad.ai
          - traefik.palad.ai
          - temporal.palad.ai
